package pbAnswer;

message GetKeywordId
{
   required int32 id = 1;
}

message GetRecipientId
{
   required int32 id = 1;
}

message ReadKeyword
{
   required string value = 1;
}

message WaitForNextAcquisition
{
   required string acquisition = 1;
}

message WaitForNextAcquisitions
{
   required int32 keywordId = 1;
   optional string acquisition = 2;
}

message WaitForEvent
{
   enum EventType { kTimeout = 0; kKeyword = 1; kDateTime = 2; }
   required EventType type = 1;
   required int32 keywordId = 2;
   optional string acquisition = 3;
}

message GetKeywordsByCapacity
{
	repeated int32 keywordIds = 1;
}

message WriteKeyword
{
}

message SendNotification
{
}

message GetInfo
{
   required string value = 1;
}


   
message msg
{
   optional string error = 1;
   
   oneof OneOf
   {
      GetKeywordId getKeywordId = 2;
      GetRecipientId getRecipientId = 3;
      ReadKeyword readKeyword = 4;
      WaitForNextAcquisition waitForNextAcquisition = 5;
      WaitForNextAcquisitions waitForNextAcquisitions = 6;
      WaitForEvent waitForEvent = 7;
      WriteKeyword writeKeyword = 8;
      SendNotification sendNotification = 9;
      GetInfo getInfo = 10;
	  GetKeywordsByCapacity getKeywordsByCapacity = 11;
   }
}

